--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -1,28 +1,59 @@
-name: test
+name: CI
 
 on:
   push:
-    branches: [ "main" ]
-  pull_request:
-    branches: [ "main" ]
+    branches: ["main"]
+  workflow_dispatch:
+
+permissions:
+  contents: read
+  pages: write
+  id-token: write
+
+concurrency:
+  group: "pages"
+  cancel-in-progress: false
 
 jobs:
-  test:
+  build:
     runs-on: ubuntu-latest
     steps:
-      - name: Checkout branch
-        uses: actions/checkout@v4
-
-      - name: Setup zig master build
-        uses: goto-bus-stop/setup-zig@v2.2.0
+      - name: Checkout
+        uses: actions/checkout@main
         with:
-          version: master
+          submodules: recursive
+          fetch-depth: 0
+          token: ${{ secrets.GITHUB_TOKEN }}
 
-      - name: Run a build test
-        run: zig build test
+      - name: Set up Homebrew
+        uses: Homebrew/actions/setup-homebrew@main
 
-      - name: Run test by passing test file
-        run: zig test src/test.zig
+      - name: Install Zig
+        run: |
+          brew update
+          brew install zig
 
-      - name: Build examples
-        run: zig build examples
+      - name: Build
+        run: zig build --summary all
+
+      - name: Test
+        run: zig build --summary all tests
+
+      - name: Build docs
+        run: zig build --summary all docs
+
+      - name: Upload artifact
+        uses: actions/upload-pages-artifact@main
+        with:
+          path: "zig-out/docs"
+
+  deploy:
+    environment:
+      name: github-pages
+      url: ${{ steps.deployment.outputs.page_url }}
+    runs-on: ubuntu-latest
+    needs: build
+    steps:
+      - name: Deploy to GitHub Pages
+        id: deployment
+        uses: actions/deploy-pages@main
